--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Anylog</title>
+    <link rel="stylesheet" type="text/css" href="/node_modules/react-grid-layout/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/react-resizable/css/styles.css">
+
     <script src="https://use.typekit.net/ihd3qsi.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
